src/app/widgets/Visualizer/RecentFileList.styl
.recent-files-button {
  position: absolute;
  top: 0;
  right: 1rem;
  border-left: solid 1px #FFFFFF;
  border-bottom: solid 1px #FFFFFF;
  height: 50%;
  min-width: 30px;
  display flex;
  align-items center;
  justify-content center;
  z-index: 10;
  color: #ffffff;
  i {
    margin: 0;
    padding: 0;
  }
}

.hidden {
  display: none;
}

.recent-file-list {
  position: absolute;
  width: 200px;
  right: -200px;
  bottom: 0;
  background: rgba(255, 255, 255, 0.7)
  display: flex;
  flex-direction column;
  justify-content flex-end;
  padding: 0.25rem;

  h2 {
    font-size: 1.1rem;
    color: #3e85c7;
    margin: 0.25rem 0 0.25rem 0;
    padding: 0 0.25rem;
    text-align left;
  }
}

.recent-file {
  width: 100%;
  padding: 0.5rem;
  border-radius 0.25rem;
  color: #6c6c6c;
  text-align left;
  border: none;
  border-bottom: solid 1px #9d9d9d;
  outline: none;
  background: rgba(255, 255, 255, 0.7)
  &:hover {
    background: rgba(255, 255, 255, 0.9)
  }
}

